--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -83,6 +83,15 @@
     color: #d1411e;
 }
 
+.name {
+    padding: 0;
+    margin-right: 3px;
+    /* display: flex;
+    align-items: center;
+    list-style: none; */
+    color: #fff;
+}
+
 @media screen and (max-width:480px) {
     .item:nth-child(2) {
         display: none;
