--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,14 +1,15 @@
 .container {
-    height: calc(140vh);
+    height: calc(300vh);
     display: flex;
 }
 
 .left {
     flex: 1;
-    height: 100%;
+    height: 150vh;
     justify-content: center;
     display: flex;
     align-items: center;
+    flex-direction: column;
 }
 
 .right {
@@ -20,6 +21,7 @@
     width: 80%;
     height: 80%;
     position: relative;
+    top: 0;
 }
 
 .price {
